using UnityEngine;

public static class GeneralVariables
{
    public static bool guiActive = false;
    public static int ISWALKINGFORWARD = Animator.StringToHash("isWalkingForward");
    public static int ISWALKINGBACK = Animator.StringToHash("isWalkingBack");
    public static int ISWALKINGLEFT = Animator.StringToHash("isWalkingLeft");
    public static int ISWALKINGRIGHT = Animator.StringToHash("isWalkingRight");
}
